# LearnIT

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_08_21_0936-c62a40b37efb_initial_migration.py  2023_09_19_1957-1b6d39fe39eb_update_user_table.py  2023_10_03_2037-e1a21a4e0a00_added_course_and_usercourse_tables_.py  2023_10_04_2214-33abd766448b_drop_item_table.py  2023_10_09_1111-5fa539f8775e_add_course_table.py  2023_11_04_0213-fe78a57f29e6_created_module_model.py  2023_11_07_0109-bafd227293e6_created_invitation_table.py  2023_11_07_0131-a040b7368253_update_invitation.py  2023_11_08_1532-603c872a339f_update_invitation_user_relatioship.py  2023_11_10_2232-194125e44d48_init_invitation_table.py  2023_11_19_2158-a6e23831dce1_nullable_true_for_invitation_user_id.py  2023_12_01_1123-641446871ae9_lessons.py  2024_02_23_1351-d898d306c5b3_course_rating_updates.py  2024_03_06_1811-2cdf6c3dd0f1_course_rating_updates.py  2024_03_07_1858-b813a5c40c3e_course_rating.py  2024_03_13_1813-7bcca41d3d9d_course_rating.py  2024_03_27_1420-2a3b8fc88d16_add_course_image_field.py
app/: filters.py  main.py  utils.py
app/api/: auth_bearer.py  deps.py  routers.py  s3.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  base.py  crud_course.py  crud_item.py  crud_lessons.py  crud_module.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/dependencies/: base.py  course.py  deps.py  lessons.py  users.py
app/models/: __init__.py  base.py  course.py  (+5 more)
(+20 files in other folders)
