[tool.poetry]
name = "learnit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.96.0"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
emails = "^0.6"
Jinja2 = "^3.1.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {version = "1.10.8", extras = ["email"]}
alembic = "^1.11.1"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
pytest = "^7.4.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
